--- a/src/Pong_Clone.ipynb
+++ b/src/Pong_Clone.ipynb
@@ -242,6 +242,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Allows the AIs to randomize their swing strength in advanced mode\n",
+    "def randomizePaddleSwingStrength(paddle):\n",
+    "    strength = random.randint(0, 1)\n",
+    "    if (strength == 1):\n",
+    "        if (paddle == 'A'):\n",
+    "            strongerPaddleASwing()\n",
+    "        else:\n",
+    "            strongerPaddleBSwing()\n",
+    "    else:\n",
+    "        if (paddle == 'A'):\n",
+    "            weakerPaddleASwing()\n",
+    "        else:\n",
+    "            weakerPaddleBSwing()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Determines Ball Movement Speed\n",
     "def setBallSpeed(speed):\n",
     "    ball.dx = speed #Movement on x-axis\n",
@@ -250,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,12 +350,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Screen Border Checking\n",
     "def borderChecking(bl):\n",
+    "    global ballHit\n",
     "    global score1\n",
     "    global score2 \n",
     "    \n",
@@ -364,7 +386,13 @@
     "        playSound('AirPlaneDing.mp3')\n",
     "        \n",
     "        bl.goto(0, 0)\n",
-    "        #randomizeBallServe(bl)\n",
+    "        randomizeBallServe(bl)\n",
+    "        \n",
+    "        if (ballHit == 1):\n",
+    "            ballHit = 0\n",
+    "            \n",
+    "        else:\n",
+    "            ballHit = 1\n",
     "        \n",
     "        sb.clear()\n",
     "        sb.write('Player {}: {}  Player {}: {}'.format(setScoreNames()[0], score1, setScoreNames()[1], score2), \n",
@@ -375,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,10 +491,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Allows players to temporarily pause the game\n",
     "def pauseGame():\n",
     "    global pause\n",
     "    global pauseMessage\n",
@@ -481,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,11 +544,7 @@
     "        paddleBDown()\n",
     "    \n",
     "    if (gM == 1):\n",
-    "        strength = random.randint(0, 1)\n",
-    "        if (strength == 1):\n",
-    "            strongerPaddleBSwing()\n",
-    "        else:\n",
-    "            weakerPaddleBSwing()\n",
+    "        randomizePaddleSwingStrength('B')\n",
     "    \n",
     "        if (xCorBall > 0 and xCorBall < xCorPB - 10 and xCorPB - xCorBall <= 75 and bH == 0):\n",
     "            pass\n",
@@ -538,11 +563,7 @@
     "            paddleADown()\n",
     "        \n",
     "        if (gM == 1):\n",
-    "            strength = random.randint(0, 1)\n",
-    "            if (strength == 1):\n",
-    "                strongerPaddleASwing()\n",
-    "            else:\n",
-    "                weakerPaddleASwing()\n",
+    "            randomizePaddleSwingStrength('A')\n",
     "            \n",
     "            if (xCorBall < 0 and xCorBall > xCorPA + 10 and abs(xCorPA - xCorBall) <= 75 and bH == 1):\n",
     "                pass\n",
@@ -556,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,30 +851,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ButtonClickOff.mp3&\n",
-      "Darwin\n",
-      "ButtonClickOn.mp3&\n",
-      "Darwin\n",
-      "ButtonClickOff.mp3&\n",
-      "Darwin\n",
-      "ButtonClickOn.mp3&\n",
-      "Darwin\n",
-      "AirPlaneDing.mp3&\n",
-      "Darwin\n",
-      "ButtonClickOn.mp3&\n",
-      "Darwin\n",
-      "ButtonClickOff.mp3&\n",
-      "Darwin\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Main Game Loop\n",
     "while (running):\n",
@@ -882,26 +882,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "turtle.done()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
