New playing field, indicators for paddle strength."

--- a/src/Pong_Clone.ipynb
+++ b/src/Pong_Clone.ipynb
@@ -33,7 +33,7 @@
     "    gameWindow = turtle.Screen()\n",
     "    gameWindow.title('Pong Clone by Maxence Brette') #Title\n",
     "    gameWindow.bgcolor('black') #Background color\n",
-    "    gameWindow.setup(width = 800, height = 600) #Screen size\n",
+    "    gameWindow.setup(width = 1000, height = 800) #Screen size\n",
     "    gameWindow.tracer(0) #Prevents automatic updates\n",
     "    \n",
     "    return gameWindow"
@@ -198,20 +198,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Allows players to hit the ball harder or softer\n",
-    "def paddleSwingPower(swingStrength):\n",
+    "#Changes the paddle strength bar's value to its appropriate number\n",
+    "def setPaddleStrengthValue():\n",
     "    global paddleAStrength\n",
     "    global paddleBStrength\n",
     "    \n",
-    "    if (swingStrength == 'r'):\n",
-    "        paddleAStrength = 2\n",
-    "    if (swingStrength == 'f'):\n",
-    "        paddleAStrength = 0.5\n",
-    "        \n",
-    "    if (swingStrength == 'o'):\n",
-    "        paddleBStrength = 2\n",
-    "    if (swingStrength == 'l'):\n",
-    "        paddleBStrength = 0.5"
+    "    paddleSwingStrengths = [paddleAStrength, paddleBStrength]    \n",
+    "    return(paddleSwingStrengths)"
    ]
   },
   {
@@ -220,25 +213,107 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Call strength by 'onkeypress'\n",
-    "#Paddle A\n",
-    "def strongerPaddleASwing():\n",
-    "    paddleSwingPower('r')\n",
+    "def paddleStrengthBars(pAS, pBS):\n",
+    "    global paddleAStrengthBar\n",
+    "    global paddleBStrengthBar\n",
     "    \n",
-    "def weakerPaddleASwing():\n",
-    "    paddleSwingPower('f')\n",
-    "\n",
-    "#Paddle B\n",
-    "def strongerPaddleBSwing():\n",
-    "    paddleSwingPower('o')\n",
+    "    global pASAText\n",
+    "    global pASBText\n",
     "    \n",
-    "def weakerPaddleBSwing():\n",
-    "    paddleSwingPower('l')"
+    "    pASBC = paddleStrengthBarColor(pAS)\n",
+    "    pBSBC = paddleStrengthBarColor(pBS)\n",
+    "    \n",
+    "    paddleAStrengthBar.reset()\n",
+    "    paddleBStrengthBar.reset()\n",
+    "    \n",
+    "    paddleAStrengthBar = genObject(0, 'square', pAS, 1, pASBC, -470, 260)\n",
+    "    paddleBStrengthBar = genObject(0, 'square', pBS, 1, pBSBC, 470, 260)\n",
+    "    \n",
+    "    pASAText.clear()\n",
+    "    pASAText = genText(0, 'white', -450, 250, \n",
+    "                       'Paddle A\\nSwing Strength: {}'.format(setPaddleStrengthValue()[0]), \n",
+    "                       'left', ('Courier', 10, 'normal'))\n",
+    "    \n",
+    "    pASBText.clear()\n",
+    "    pASBText = genText(0, 'white', 450, 250, \n",
+    "                       'Paddle B\\nSwing Strength: {}'.format(setPaddleStrengthValue()[1]), \n",
+    "                       'right', ('Courier', 10, 'normal'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def paddleStrengthBarColor(pS):\n",
+    "    if (pS == 0.5):\n",
+    "        return 'green'\n",
+    "    elif (pS == 1): \n",
+    "        return 'yellow'\n",
+    "    elif (pS == 2): \n",
+    "        return 'red'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Allows players to hit the ball harder or softer\n",
+    "def paddleSwingPower(swingStrength, pa):\n",
+    "    if (pa == False): #Prevents paddle swing strength change when the game is paused\n",
+    "\n",
+    "        global paddleAStrength\n",
+    "        global paddleBStrength\n",
+    "        update = True\n",
+    "\n",
+    "        if (swingStrength == 'r' or swingStrength == 'f'):\n",
+    "            if (swingStrength == 'r' and paddleAStrength < 2): \n",
+    "                paddleAStrength *= 2\n",
+    "            elif (swingStrength == 'f' and paddleAStrength > 0.5):\n",
+    "                paddleAStrength *= 0.5\n",
+    "            else:\n",
+    "                update = False\n",
+    "\n",
+    "        if (swingStrength == 'o' or swingStrength == 'l'):\n",
+    "            if (swingStrength == 'o' and paddleBStrength < 2): \n",
+    "                paddleBStrength *= 2\n",
+    "            elif (swingStrength == 'l' and paddleBStrength > 0.5):\n",
+    "                paddleBStrength *= 0.5\n",
+    "            else:\n",
+    "                update = False\n",
+    "\n",
+    "        if (update == True):\n",
+    "            paddleStrengthBars(paddleAStrength, paddleBStrength)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Call strength by 'onkeypress'\n",
+    "#Paddle A\n",
+    "def strongerPaddleASwing():\n",
+    "    paddleSwingPower('r', pause)\n",
+    "    \n",
+    "def weakerPaddleASwing():\n",
+    "    paddleSwingPower('f', pause)\n",
+    "\n",
+    "#Paddle B\n",
+    "def strongerPaddleBSwing():\n",
+    "    paddleSwingPower('o', pause)\n",
+    "    \n",
+    "def weakerPaddleBSwing():\n",
+    "    paddleSwingPower('l', pause)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +796,7 @@
     "                      'center', ('Courier', 24, 'normal'))\n",
     "\n",
     "numPlayers = gameWindow.numinput('PlayerCountSelection', 'How many players? ', 1, minval = 0, maxval = 2)\n",
-    "playerCount.clear()\n",
+    "playerCount.reset()\n",
     "\n",
     "#Game Type\n",
     "gameType = genText(0, 'white', 0, 0, 'Which Game Mode: Classic or Advanced\\nPress: \"0\" or \"1\"', \n",
@@ -730,7 +805,7 @@
     "gameMode = gameWindow.numinput('GameModeSelection', 'Which Game Mode: Classic or Advanced?', \n",
     "                               0, minval = 0, maxval = 1)\n",
     "\n",
-    "gameType.clear()\n",
+    "gameType.reset()\n",
     "\n",
     "#AI Mode\n",
     "typeAI = genText(0, 'white', 0, 0, 'Which AI Mode: Simple or Predictive\\nPress: \"0\" or \"1\"', \n",
@@ -739,19 +814,29 @@
     "modeAI = gameWindow.numinput('AIModeSelection', 'Which AI Mode: Simple or Predictive?', \n",
     "                             0, minval = 0, maxval = 1)\n",
     "\n",
-    "typeAI.clear()"
+    "typeAI.reset()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Sets up the game environment    \n",
-    "#Generates the Playing Field Divider\n",
-    "playingFieldDivider = genObject(0, 'square', 30, 0.1, 'white', 0, 0)\n",
+    "#Generates the Tenis Court\n",
+    "net = genObject(0, 'square', 40, 0.1, 'white', 0, 0)\n",
     "\n",
+    "centerServiceLine = genObject(0, 'square', 0.1, 15, 'white', 0, 0)\n",
+    "\n",
+    "serviceLineWest = genObject(0, 'square', 30, 0.1, 'white', -150, 0)\n",
+    "serviceLineEast = genObject(0, 'square', 30, 0.1, 'white', 150, 0) \n",
+    "\n",
+    "baslineWest = genObject(0, 'square', 40, 0.1, 'white', -370, 0)\n",
+    "baslineEast = genObject(0, 'square', 40, 0.1, 'white', 370, 0)\n",
+    "\n",
+    "singleSidlineNorth = genObject(0, 'square', 0.1, 37, 'white', 0, 300)\n",
+    "singleSidlineSouth = genObject(0, 'square', 0.1, 37, 'white', 0, -300)\n",
     "\n",
     "#Generates the Paddles\n",
     "#Left Paddle A\n",
@@ -782,28 +867,39 @@
     "             'center', ('Courier', 24, 'normal'))\n",
     "\n",
     "#Player Controls Instructions\n",
-    "controls = genText(0, 'white', 0, 250, 'Up: \"w\" Down: \"s\"    Up: \"\\u2191\" Down: \"\\u2193\"', \n",
-    "                   'center', ('Courier', 10, 'normal'))\n",
+    "if (numPlayers >= 0):\n",
+    "    controls1 = genText(0, 'white', 0, 250, 'Up: \"w\" Down: \"s\"    Up: \"\\u2191\" Down: \"\\u2193\"', \n",
+    "                        'center', ('Courier', 10, 'normal'))\n",
     "\n",
     "if (gameMode == 1):\n",
-    "    controls = genText(0, 'white', 0, 230, 'Left: \"a\" Right: \"d\"    Left: \"\\u2190\" Right: \"\\u2192\"', \n",
-    "                       'center', ('Courier', 10, 'normal'))\n",
-    "    controls = genText(0, 'white', 0, 210, \n",
-    "                       'Stronger Swing: \"r\" Weaker Swing: \"f\"    Stronger Swing: \"o\" Weaker Swing: \"l\"', \n",
-    "                       'center', ('Courier', 10, 'normal'))\n",
-    "\n",
+    "    controls2 = genText(0, 'white', 0, 230, 'Left: \"a\" Right: \"d\"    Left: \"\\u2190\" Right: \"\\u2192\"', \n",
+    "                        'center', ('Courier', 10, 'normal'))\n",
+    "    controls3 = genText(0, 'white', 0, 210, \n",
+    "                        'Stronger Swing: \"r\" Weaker Swing: \"f\"    Stronger Swing: \"o\" Weaker Swing: \"l\"', \n",
+    "                        'center', ('Courier', 10, 'normal'))\n",
+    "    \n",
+    "    pASAText = genText(0, 'white', -450, 250, \n",
+    "                       'Paddle A\\nSwing Strength: {}'.format(setPaddleStrengthValue()[0]), \n",
+    "                       'left', ('Courier', 10, 'normal'))\n",
+    "    paddleAStrengthBar = genObject(0, 'square', 1, 1, 'yellow', -470, 260)\n",
+    "    \n",
+    "    pASBText = genText(0, 'white', 450, 250, \n",
+    "                       'Paddle B\\nSwing Strength: {}'.format(setPaddleStrengthValue()[1]), \n",
+    "                       'right', ('Courier', 10, 'normal'))\n",
+    "    paddleBStrengthBar = genObject(0, 'square', 1, 1, 'yellow', 470, 260)\n",
+    "    \n",
     "#Exiting the Game Instructions\n",
-    "exitInstructions = genText(0, 'white', 0, -280, '  To exit the game press: \"q\"', \n",
+    "exitInstructions = genText(0, 'white', 0, -330, '  To exit the game press: \"q\"', \n",
     "                           'left', ('Courier', 10, 'normal'))\n",
     "\n",
     "#Pausing the Game Instructions\n",
-    "exitInstructions = genText(0, 'white', 0, -280, 'To pause the game press: \"p\"  ', \n",
-    "                           'right', ('Courier', 10, 'normal'))"
+    "pauseInstructions = genText(0, 'white', 0, -330, 'To pause the game press: \"p\"  ', \n",
+    "                            'right', ('Courier', 10, 'normal'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,13 +925,13 @@
     "            gameWindow.onkeypress(paddleBLeft, 'Left')\n",
     "            gameWindow.onkeypress(paddleBRight, 'Right')\n",
     "                    \n",
-    "            gameWindow.onkeypress(strongerPaddleASwing, 'o')\n",
-    "            gameWindow.onkeypress(weakerPaddleASwing, 'l')"
+    "            gameWindow.onkeypress(strongerPaddleBSwing, 'o')\n",
+    "            gameWindow.onkeypress(weakerPaddleBSwing, 'l')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
