Issue with hidden pause message, multi color background. New playing field.

--- a/src/Pong_Clone.ipynb
+++ b/src/Pong_Clone.ipynb
@@ -30,10 +30,15 @@
    "source": [
     "#Generates the game window\n",
     "def genGameWindow():\n",
+    "    width = 1.0\n",
+    "    height = 1.0\n",
+    "    \n",
     "    gameWindow = turtle.Screen()\n",
     "    gameWindow.title('Pong Clone by Maxence Brette') #Title\n",
     "    gameWindow.bgcolor('black') #Background color\n",
-    "    gameWindow.setup(width = 1000, height = 800) #Screen size\n",
+    "    gameWindow.setup(width, height, startx = 0, starty = 0) #Creates a window at the center of the screen\n",
+    "    #gameWindow.setup(width = 1500, height = 800) #Screen size\n",
+    "    #gameWindow.setworldcoordinates(0, 0, width, height)\n",
     "    gameWindow.tracer(0) #Prevents automatic updates\n",
     "    \n",
     "    return gameWindow"
@@ -83,6 +88,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Moves a turtle object towards the front of the screen\n",
+    "def moveObjectToFront(t):\n",
+    "    t.forward(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Changes the scoreboard player names according to whether or not it is PVP or PVE\n",
     "def setScoreNames():\n",
     "    player1 = 1\n",
@@ -97,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,38 +242,38 @@
     "    paddleAStrengthBar.reset()\n",
     "    paddleBStrengthBar.reset()\n",
     "    \n",
-    "    paddleAStrengthBar = genObject(0, 'square', pAS, 1, pASBC, -470, 260)\n",
-    "    paddleBStrengthBar = genObject(0, 'square', pBS, 1, pBSBC, 470, 260)\n",
+    "    paddleAStrengthBar = genObject(0, 'square', pAS, 1, pASBC, -610, 325)\n",
+    "    paddleBStrengthBar = genObject(0, 'square', pBS, 1, pBSBC, 610, 325)\n",
     "    \n",
     "    pASAText.clear()\n",
-    "    pASAText = genText(0, 'white', -450, 250, \n",
+    "    pASAText = genText(0, 'white', -590, 315, \n",
     "                       'Paddle A\\nSwing Strength: {}'.format(setPaddleStrengthValue()[0]), \n",
     "                       'left', ('Courier', 10, 'normal'))\n",
     "    \n",
     "    pASBText.clear()\n",
-    "    pASBText = genText(0, 'white', 450, 250, \n",
+    "    pASBText = genText(0, 'white', 590, 315, \n",
     "                       'Paddle B\\nSwing Strength: {}'.format(setPaddleStrengthValue()[1]), \n",
     "                       'right', ('Courier', 10, 'normal'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def paddleStrengthBarColor(pS):\n",
     "    if (pS == 0.5):\n",
     "        return 'green'\n",
-    "    elif (pS == 1): \n",
+    "    elif (pS == 1.0): \n",
     "        return 'yellow'\n",
-    "    elif (pS == 2): \n",
+    "    elif (pS == 2.0): \n",
     "        return 'red'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,34 +371,34 @@
     "    dxBall = bl.dx\n",
     "    dyBall = bl.dy\n",
     "    \n",
-    "    if (dxBall < -3):\n",
-    "        bl.dx = -3\n",
+    "    if (dxBall < -6):\n",
+    "        bl.dx = -6\n",
     "    \n",
-    "    if (dxBall > 3):\n",
-    "        bl.dx = 3\n",
+    "    if (dxBall > 6):\n",
+    "        bl.dx = 6\n",
     "\n",
-    "    if (dyBall < -3):\n",
-    "        bl.dy = -3\n",
+    "    if (dyBall < -6):\n",
+    "        bl.dy = -6\n",
     "    \n",
-    "    if (dyBall > 3):\n",
-    "        bl.dy = 3\n",
+    "    if (dyBall > 6):\n",
+    "        bl.dy = 6\n",
     "    \n",
-    "    if (dxBall > -0.75 and dxBall < 0):\n",
-    "        bl.dx = -0.75\n",
+    "    #if (dxBall > -0.75 and dxBall < 0):\n",
+    "    #    bl.dx = -0.75\n",
     "    \n",
-    "    if (dxBall < 0.75 and dxBall > 0):\n",
-    "        bl.dx = 0.75\n",
+    "    #if (dxBall < 0.75 and dxBall > 0):\n",
+    "    #    bl.dx = 0.75\n",
     "    \n",
-    "    if (dyBall > -0.5 and dyBall < 0):\n",
-    "        bl.dy = -0.5\n",
+    "    #if (dyBall > -0.5 and dyBall < 0):\n",
+    "    #    bl.dy = -0.5\n",
     "        \n",
-    "    if (dyBall > 0 and dyBall < 0.5):\n",
-    "        bl.dy = 0.5"
+    "    #if (dyBall > 0 and dyBall < 0.5):\n",
+    "    #    bl.dy = 0.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,15 +593,16 @@
     "    \n",
     "    if (pause == True):\n",
     "        pause = False\n",
-    "        pauseMessage.clear()\n",
+    "        pauseMessage.reset()\n",
     "    else:\n",
     "        pause = True\n",
-    "        pauseMessage = genText(0, 'white', 0, 0, '  Game  Paused', 'center', ('Courier', 24, 'normal'))"
+    "        pauseMessage = genText(0, 'white', 0, 0, '  GAME  PAUSED', 'center', ('Courier', 50, 'normal'))\n",
+    "        moveObjectToFront(pauseMessage)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,40 +836,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Sets up the game environment    \n",
     "#Generates the Tenis Court\n",
-    "net = genObject(0, 'square', 40, 0.1, 'white', 0, 0)\n",
+    "court = genObject(0, 'square', 30, 65, 'blue', 0, 0)\n",
     "\n",
-    "centerServiceLine = genObject(0, 'square', 0.1, 15, 'white', 0, 0)\n",
+    "net = genObject(0, 'square', 35, 0.1, 'white', 0, 0)\n",
     "\n",
-    "serviceLineWest = genObject(0, 'square', 30, 0.1, 'white', -150, 0)\n",
-    "serviceLineEast = genObject(0, 'square', 30, 0.1, 'white', 150, 0) \n",
+    "centerServiceLine = genObject(0, 'square', 0.1, 35, 'white', 0, 0)\n",
     "\n",
-    "baslineWest = genObject(0, 'square', 40, 0.1, 'white', -370, 0)\n",
-    "baslineEast = genObject(0, 'square', 40, 0.1, 'white', 370, 0)\n",
+    "serviceLineWest = genObject(0, 'square', 22.5, 0.1, 'white', -350, 0)\n",
+    "serviceLineEast = genObject(0, 'square', 22.5, 0.1, 'white', 350, 0) \n",
     "\n",
-    "singleSidlineNorth = genObject(0, 'square', 0.1, 37, 'white', 0, 300)\n",
-    "singleSidlineSouth = genObject(0, 'square', 0.1, 37, 'white', 0, -300)\n",
+    "baslineWest = genObject(0, 'square', 30, 0.1, 'white', -650, 0)\n",
+    "baslineEast = genObject(0, 'square', 30, 0.1, 'white', 650, 0)\n",
+    "\n",
+    "singleSidlineNorth = genObject(0, 'square', 0.1, 65, 'white', 0, 225)\n",
+    "singleSidlineSouth = genObject(0, 'square', 0.1, 65, 'white', 0, -225)\n",
+    "\n",
+    "doubleSidlineNorth = genObject(0, 'square', 0.1, 65, 'white', 0, 300)\n",
+    "doubleSidlineSouth = genObject(0, 'square', 0.1, 65, 'white', 0, -300)\n",
     "\n",
     "#Generates the Paddles\n",
     "#Left Paddle A\n",
     "paddleA = genObject(0, 'square', 5, 1, 'white', -350, 0)\n",
-    "paddleAStrength = 1\n",
+    "paddleAStrength = 1.0\n",
     "\n",
     "#Right Paddle B\n",
     "paddleB = genObject(0, 'square', 5, 1, 'white', 350, 0)\n",
-    "paddleBStrength = 1\n",
+    "paddleBStrength = 1.0\n",
     "\n",
     "\n",
     "#Generates the Ball\n",
     "#Ball\n",
     "ball = genObject(0, 'square', 1, 1, 'white', 0, 0)\n",
     "ballHit = 0\n",
-    "defaultBallSpeed = 1.5\n",
+    "defaultBallSpeed = 3.0\n",
     "setBallSpeed(defaultBallSpeed)\n",
     "\n",
     "\n",
@@ -862,44 +884,52 @@
     "score2 = 0\n",
     "\n",
     "#Scoreboard\n",
-    "sb = genText(0, 'white', 0, 260, \n",
+    "sb = genText(0, 'white', 0, 310, \n",
     "             'Player {}: {}  Player {}: {}'.format(setScoreNames()[0], score1, setScoreNames()[1], score2), \n",
     "             'center', ('Courier', 24, 'normal'))\n",
     "\n",
     "#Player Controls Instructions\n",
-    "if (numPlayers >= 0):\n",
-    "    controls1 = genText(0, 'white', 0, 250, 'Up: \"w\" Down: \"s\"    Up: \"\\u2191\" Down: \"\\u2193\"', \n",
-    "                        'center', ('Courier', 10, 'normal'))\n",
+    "if (numPlayers > 0):\n",
+    "    pABasicControls = genText(0, 'white', -200, 330, 'Up: \"w\" | Down: \"s\"\\t\\t       ', \n",
+    "                              'right', ('Courier', 10, 'normal'))\n",
+    "    \n",
+    "    if (numPlayers > 1):\n",
+    "        pBBasicControls = genText(0, 'white', 200, 330, 'Up: \"\\u2191\" | Down: \"\\u2193\"', \n",
+    "                                  'left', ('Courier', 10, 'normal'))\n",
     "\n",
     "if (gameMode == 1):\n",
-    "    controls2 = genText(0, 'white', 0, 230, 'Left: \"a\" Right: \"d\"    Left: \"\\u2190\" Right: \"\\u2192\"', \n",
-    "                        'center', ('Courier', 10, 'normal'))\n",
-    "    controls3 = genText(0, 'white', 0, 210, \n",
-    "                        'Stronger Swing: \"r\" Weaker Swing: \"f\"    Stronger Swing: \"o\" Weaker Swing: \"l\"', \n",
-    "                        'center', ('Courier', 10, 'normal'))\n",
+    "    if (numPlayers > 0):\n",
+    "        pAAdvancedControls = genText(0, 'white', -200, 310, \n",
+    "                                     'Left: \"a\" | Right: \"d\"\\nStronger Swing: \"r\" | Weaker Swing: \"f\"', \n",
+    "                                     'right', ('Courier', 10, 'normal'))\n",
     "    \n",
-    "    pASAText = genText(0, 'white', -450, 250, \n",
+    "    if (numPlayers > 1):\n",
+    "        pBAdvancedControls = genText(0, 'white', 200, 310, \n",
+    "                                     'Left: \"\\u2190\" | Right: \"\\u2192\"\\nStronger Swing: \"o\" | Weaker Swing: \"l\"', \n",
+    "                                     'left', ('Courier', 10, 'normal'))\n",
+    "    \n",
+    "    pASAText = genText(0, 'white', -590, 315, \n",
     "                       'Paddle A\\nSwing Strength: {}'.format(setPaddleStrengthValue()[0]), \n",
     "                       'left', ('Courier', 10, 'normal'))\n",
-    "    paddleAStrengthBar = genObject(0, 'square', 1, 1, 'yellow', -470, 260)\n",
+    "    paddleAStrengthBar = genObject(0, 'square', 1, 1, 'yellow', -610, 325)\n",
     "    \n",
-    "    pASBText = genText(0, 'white', 450, 250, \n",
+    "    pASBText = genText(0, 'white', 590, 315, \n",
     "                       'Paddle B\\nSwing Strength: {}'.format(setPaddleStrengthValue()[1]), \n",
     "                       'right', ('Courier', 10, 'normal'))\n",
-    "    paddleBStrengthBar = genObject(0, 'square', 1, 1, 'yellow', 470, 260)\n",
+    "    paddleBStrengthBar = genObject(0, 'square', 1, 1, 'yellow', 610, 325)\n",
     "    \n",
     "#Exiting the Game Instructions\n",
-    "exitInstructions = genText(0, 'white', 0, -330, '  To exit the game press: \"q\"', \n",
+    "exitInstructions = genText(0, 'white', 0, -325, '  To exit the game press: \"q\"', \n",
     "                           'left', ('Courier', 10, 'normal'))\n",
     "\n",
     "#Pausing the Game Instructions\n",
-    "pauseInstructions = genText(0, 'white', 0, -330, 'To pause the game press: \"p\"  ', \n",
+    "pauseInstructions = genText(0, 'white', 0, -325, 'To pause the game press: \"p\"  ', \n",
     "                            'right', ('Courier', 10, 'normal'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
