Reduce redundant code, color changes, blue court trouble.

--- a/src/Pong_Clone.ipynb
+++ b/src/Pong_Clone.ipynb
@@ -88,9 +88,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Moves a turtle object towards the front of the screen\n",
-    "def moveObjectToFront(t):\n",
-    "    t.forward(0)"
+    "#Moves a turtle object towards the front of the screen by having it 'drawn' last\n",
+    "def moveObjectToFront(turtleObject):\n",
+    "    turtleObject.forward(0)\n",
+    "    print('Bring pause message forward.')"
    ]
   },
   {
@@ -597,7 +598,8 @@
     "    else:\n",
     "        pause = True\n",
     "        pauseMessage = genText(0, 'white', 0, 0, '  GAME  PAUSED', 'center', ('Courier', 50, 'normal'))\n",
-    "        moveObjectToFront(pauseMessage)"
+    "        moveObjectToFront(pauseMessage)\n",
+    "        #turtle.onscreenclick(lambda x, y: moveObjectToFront(pauseMessage))"
    ]
   },
   {
@@ -736,7 +738,7 @@
    "source": [
     "#Control's the AI Paddles\n",
     "#As the AI always correctly predict's the ball's path, with 0 players the same ball movement repeats infinitely\n",
-    "def predictiveOpponentAI(bl, bH, pA, pB, nP):    \n",
+    "def predictiveOpponentAI(bl, bH, pA, pB, nP, gM):    \n",
     "    xCorBall = bl.xcor()\n",
     "    yCorBall = bl.ycor()\n",
     "    \n",
@@ -794,8 +796,9 @@
     "pause = False\n",
     "pauseMessage = genText(0, 'white', 0, 0, '', 'center', ('Courier', 24, 'normal'))\n",
     "\n",
-    "speedSAI = 26\n",
-    "speedPAI = 26\n",
+    "baseAISpeed = 26\n",
+    "speedSAI = baseAISpeed\n",
+    "speedPAI = baseAISpeed\n",
     "\n",
     "ballScoreXCor = 0\n",
     "ballScoreYCor = 0"
@@ -841,6 +844,8 @@
    "outputs": [],
    "source": [
     "#Sets up the game environment    \n",
+    "\n",
+    "\n",
     "#Generates the Tenis Court\n",
     "court = genObject(0, 'square', 30, 65, 'blue', 0, 0)\n",
     "\n",
@@ -862,17 +867,19 @@
     "\n",
     "#Generates the Paddles\n",
     "#Left Paddle A\n",
-    "paddleA = genObject(0, 'square', 5, 1, 'white', -350, 0)\n",
+    "paddleA = genObject(0, 'square', 5, 1, 'orange', -350, 0)\n",
     "paddleAStrength = 1.0\n",
+    "paddleAPowerSwingReady = 10\n",
     "\n",
     "#Right Paddle B\n",
-    "paddleB = genObject(0, 'square', 5, 1, 'white', 350, 0)\n",
+    "paddleB = genObject(0, 'square', 5, 1, 'orange', 350, 0)\n",
     "paddleBStrength = 1.0\n",
+    "paddleAPowerSwingReady = 10\n",
     "\n",
     "\n",
     "#Generates the Ball\n",
     "#Ball\n",
-    "ball = genObject(0, 'square', 1, 1, 'white', 0, 0)\n",
+    "ball = genObject(0, 'square', 1, 1, 'yellow', 0, 0)\n",
     "ballHit = 0\n",
     "defaultBallSpeed = 3.0\n",
     "setBallSpeed(defaultBallSpeed)\n",
@@ -965,6 +972,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Calls the appropriate AI opponent function with a built in timer to reduce repeated code\n",
+    "def timer(baseAISpeed, AISpeed, function, ball, ballHit, paddleB, paddleA, numPlayers, gameMode):\n",
+    "    AISpeed -= 1\n",
+    "    \n",
+    "    if (AISpeed == 0):\n",
+    "        function(ball, ballHit, paddleB, paddleA, numPlayers, gameMode)\n",
+    "        AISpeed = baseAISpeed\n",
+    "        \n",
+    "    return AISpeed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Keyboard Binding\n",
     "gameWindow.listen()\n",
     "\n",
@@ -977,9 +1001,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bring pause message forward.\n",
+      "Bring pause message forward.\n",
+      "Bring pause message forward.\n"
+     ]
+    }
+   ],
    "source": [
     "#Main Game Loop\n",
     "while (running):\n",
@@ -992,23 +1026,19 @@
     "\n",
     "        if (numPlayers < 2):\n",
     "            if (modeAI == 0):\n",
-    "                speedSAI -= 1\n",
-    "                if (speedSAI == 0):\n",
-    "                    simpleOpponentAI(ball, ballHit, paddleB, paddleA, numPlayers, gameMode)\n",
-    "                    speedSAI = 26\n",
+    "                speedSAI = timer(baseAISpeed, speedSAI, simpleOpponentAI, \n",
+    "                                 ball, ballHit, paddleB, paddleA, numPlayers, gameMode)    \n",
     "            else:\n",
     "                predictBallMovement(ball)\n",
-    "                speedPAI -= 1\n",
-    "                if (speedPAI == 0):\n",
-    "                    predictiveOpponentAI(ball, ballHit, paddleA, paddleB, numPlayers)\n",
-    "                    speedPAI = 26\n",
+    "                speedPAI = timer(baseAISpeed, speedPAI, predictiveOpponentAI, \n",
+    "                                 ball, ballHit, paddleA, paddleB, numPlayers, gameMode)\n",
     "                    \n",
     "    gameWindow.update()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
